Add style page with font links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Darragh Coleman">
     <meta name="description" content="Obscure and dark Irish history website">
     <meta name="keywords" content="eire dubh, irish, history, obscure, dark, irish diaspora, emigrants">
+
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Éire Dubh</title>
 </head>
 
