Add header, logo and menu links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
 </head>
 
 <body>
-    <header>Title & navbar</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo"><span style="color:green;">É</span>ire <span style="color:orange;">D</span>ubh</h1>
+        </a>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="#">Events</a>
+                </li>
+                <li>
+                    <a href="gallery.html">People</a>
+                </li>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>Banner/Main image & catchy tagline</section>
     <section>Longer website description</section>
     <section>Irish diaspora facts & map</section>
