--- a/index.html
+++ b/index.html
@@ -20,21 +20,23 @@
         <nav id="menu">
             <ul>
                 <li>
-                    <a href="#">Contact</a>
+                    <h3><a href="contact.html">Contact</a></h3>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <h3><a href="events.html">Events</a></h3>
                 </li>
                 <li>
-                    <a href="gallery.html">People</a>
+                    <h3><a href="people.html">People</a></h3>
                 </li>
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <h3><a href="index.html" class="active">Home</a></h3>
                 </li>
             </ul>
         </nav>
     </header>
-    <section>Banner/Main image & catchy tagline</section>
+    <section>
+        <img src="assets/images/trees-g15d972f20_1920.jpg" alt="The dark hedges in Northern Ireland">
+    </section>
     <section>Longer website description</section>
     <section>Irish diaspora facts & map</section>
     <section>Links to internal pages</section>
