--- a/people.html
+++ b/people.html
@@ -14,22 +14,22 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <h1 id="logo">Éire Dubh</h1>
+        <a href="people.html">
+            <h1 id="logo"><span style="color:green;">É</span>ire <span style="color:orange;">D</span>ubh</h1>
         </a>
         <nav id="menu">
             <ul>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <h3><a href="contact.html">Contact</a></h3>
                 </li>
                 <li>
-                    <a href="events.html">Events</a>
+                    <h3><a href="events.html">Events</a></h3>
                 </li>
                 <li>
-                    <a href="people.html"  class="active">People</a>
+                    <h3><a href="people.html"  class="active">People</a></h3>
                 </li>
                 <li>
-                    <a href="index.html">Home</a>
+                    <h3><a href="index.html">Home</a></h3>
                 </li>
             </ul>
         </nav>
