Fixed menu positioning

--- a/index.html
+++ b/index.html
@@ -14,29 +14,33 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <h1 id="logo"><span style="color:green;">É</span>ire <span style="color:orange;">D</span>ubh</h1>
-        </a>
-        <nav id="menu">
-            <ul>
-                <li>
-                    <h3><a href="contact.html">Contact</a></h3>
-                </li>
-                <li>
-                    <h3><a href="events.html">Events</a></h3>
-                </li>
-                <li>
-                    <h3><a href="people.html">People</a></h3>
-                </li>
-                <li>
-                    <h3><a href="index.html" class="active">Home</a></h3>
-                </li>
-            </ul>
-        </nav>
+        <div>
+            <a href="index.html">
+                <h1 id="logo"><span style="color:green;">É</span>ire <span style="color:orange;">D</span>ubh</h1>
+            </a>
+            <nav id="menu">
+                <ul>
+                    <li>
+                        <h3><a href="contact.html">Contact</a></h3>
+                    </li>
+                    <li>
+                        <h3><a href="events.html">Events</a></h3>
+                    </li>
+                    <li>
+                        <h3><a href="people.html">People</a></h3>
+                    </li>
+                    <li>
+                        <h3><a href="index.html" class="active">Home</a></h3>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <section>
-        <img src="assets/images/trees-g15d972f20_1920.jpg" alt="The dark hedges in Northern Ireland">
-    </section>
+        <div class="main-banner">
+            <img src="assets/images/trees-g15d972f20_1920.jpg" alt="The dark hedges in Northern Ireland" id="main-image">
+        </div>
+        </section>
     <section>Longer website description</section>
     <section>Irish diaspora facts & map</section>
     <section>Links to internal pages</section>
