Add text on main image, content in about section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <header>
         <div>
             <a href="index.html">
@@ -36,12 +37,27 @@
             </nav>
         </div>
     </header>
-    <section>
-        <div class="main-banner">
+
+
+    <section id="main-banner">
+        <div>
             <img src="assets/images/trees-g15d972f20_1920.jpg" alt="The dark hedges in Northern Ireland" id="main-image">
         </div>
-        </section>
-    <section>Longer website description</section>
+        <div>
+            <h2 id="tagline" style="font-style: italic;">Not all those who wander are lovely...</h2>
+        </div>
+    </section>
+
+
+    <section id="home-about">
+        <div>
+            <p>Forget Saint Brendan and Joe Biden, never mind Maureen O'Hara and Barak O'Bama, Éire Dubh looks at obscure figures and events of the Irish diaspora 
+            that weren't anything to write home about.</p>
+            <p>As much as we laud the many successful emigrants, and often attempt to lay claim to those with tenuous connections to our tiny island, 
+            not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
+        </div>
+    </section>
+
     <section>Irish diaspora facts & map</section>
     <section>Links to internal pages</section>
     <footer>Social media links</footer>
