--- a/index.html
+++ b/index.html
@@ -41,20 +41,25 @@
 
     <section id="main-banner">
         <div>
-            <img src="assets/images/trees-g15d972f20_1920.jpg" alt="The dark hedges in Northern Ireland" id="main-image">
-        </div>
-        <div>
-            <h2 id="tagline" style="font-style: italic;">Not all those who wander are lovely...</h2>
+            <figure>
+                <img src="assets/images/darkhedges.jpg" alt="The dark hedges in Northern Ireland" id="main-image">
+                <figcaption>
+                    <h2 id="tagline" style="font-style: italic;">Not all those who wander...</h2>
+                </figcaption>
+            </figure>
         </div>
     </section>
 
 
-    <section id="home-about">
-        <div>
+    <section id="about">
+        <div id="about-text">
             <p>Forget Saint Brendan and Joe Biden, never mind Maureen O'Hara and Barak O'Bama, Éire Dubh looks at obscure figures and events of the Irish diaspora 
             that weren't anything to write home about.</p>
             <p>As much as we laud the many successful emigrants, and often attempt to lay claim to those with tenuous connections to our tiny island, 
             not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
+        </div>
+        <div>
+            <img src="assets/images/billythekid.png" alt="A wanted poster of Billy The Kid" id="about-image">
         </div>
     </section>
 
