Bugs not found, clear and restart

--- a/index.html
+++ b/index.html
@@ -14,36 +14,23 @@
 
 <body>
 
-    <header>
-        <div>
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+        <label class="logo">
             <a href="index.html">
-                <h1 id="logo"><span style="color:#32cd32;">É</span>ire <span style="color:#FFA500;">D</span>ubh</h1>
+            <h1><span style="color:#32cd32;">É</span>ire <span style="color:#FFA500;">D</span>ubh</h1>
             </a>
-            <nav id="menu">
-                <input id="nav-toggle" type="checkbox">
-                <ul>
-                    <li>
-                        <h3><a href="contact.html">Contact</a></h3>
-                    </li>
-                    <li>
-                        <h3><a href="events.html">Events</a></h3>
-                    </li>
-                    <li>
-                        <h3><a href="people.html">People</a></h3>
-                    </li>
-                    <li>
-                        <h3><a href="index.html" class="active">Home</a></h3>
-                    </li>
-                </ul>
-                <label for="nav-toggle" class="burger-menu">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </label>
-            </nav>
-        </div>
-    </header>
-
+        </label>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="people.html">People</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
     <section id="main-banner">
         <div>
@@ -84,6 +71,9 @@
     <section id="article-links">Links to internal pages</section>
 
     <footer>Social media links</footer>
+
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
