Add style to logo, edit fonts, edit burger menu and a:active/a:hover states, finish navbar

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <nav>
             <input id="nav-toggle" type="checkbox">
             <div class="logo">
-                <h2>Éire Dubh</h2>
+                <h1 id="logo"><span style="color:#008000;">É</span>ire <span style="color:#FFA500;">D</span>ubh</h1>
             </div>
             
             <ul class="links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">People</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="people.html">People</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <label for="nav-toggle" class="burger-menu">
                 <div class="line"></div>
