--- a/index.html
+++ b/index.html
@@ -35,10 +35,19 @@
         </nav>
 
         <section>
-            <div class="container">
-                <img src="assets/images/darkhedges.jpg" alt="">
+            <div class="banner">
+                <img src="assets/images/darkhedges.jpg" alt="A picture of the dark hedges in Northern Ireland">
             </div>
+            <div class="banner-text"><h3>Not all those who wander...</h3></div>
         </section>
+
+        <section>About</section>
+
+        <section>Diaspora</section>
+
+        <section>Go to</section>
+
+        <footer></footer>
 </body>
 
 </html>
