Add About section, style hr element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <input id="nav-toggle" type="checkbox">
             <div class="logo">
-                <h1 id="logo"><span style="color:#008000;">É</span>ire <span style="color:#FFA500;">D</span>ubh</h1>
+                <h1><span style="color:#008000;">É</span>ire <span style="color:#FFA500;">D</span>ubh</h1>
             </div>
             
             <ul class="links">
@@ -38,10 +38,29 @@
             <div class="banner">
                 <img src="assets/images/darkhedges.jpg" alt="A picture of the dark hedges in Northern Ireland">
             </div>
-            <div class="banner-text"><h3>Not all those who wander...</h3></div>
+            <div class="banner-text">
+                <h3>Not all those who wander...</h3>
+            </div>
         </section>
 
-        <section>About</section>
+        <section class="container-one">
+            <div id="about-text">
+                <h2>About</h2>
+                <br>
+                <hr>
+                <br>
+                <p>Forget Saint Brendan and Joe Biden.</p>
+                <p>Never mind Maureen O'Hara and Barak O'Bama.</p>
+                <p><span style="font-style: italic;"><span style="color: green;">É</span>ire <span style="color:#FFA500">D</span>ubh</span> looks at obscure figures and events of the Irish diaspora 
+                    that maybe weren't much to write home about.</p>
+                <br>
+                <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections 
+                    to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
+                    isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
+                <br>
+                <p>So for better or for worse, we bring you a collection of histories of the <span style="font-style: italic;">down-trodden, dark</span> and down-right <span style="font-style: italic;">dispicable</span> diaspora of Ireland.</p>
+            </div>
+        </section>
 
         <section>Diaspora</section>
 
