Style banner and banner image

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 <br>
                 <p>So for better or for worse, we bring you a collection of histories of the <span style="font-style: italic;">down-trodden, dark</span> and down-right <span style="font-style: italic;">dispicable</span> diaspora of Ireland.</p>
             </div>
+            <div id="about-image">
+                <img src="assets/images/billythekid.png" alt="A wanted poster of Billy The Kid">
+            </div>
         </section>
 
         <section>Diaspora</section>
