Bugs in about section

--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
                     isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
                 <br>
                 <p>So for better or for worse, we bring you a collection of histories of the <span style="font-style: italic;">down-trodden, dark</span> and down-right <span style="font-style: italic;">dispicable</span> diaspora of Ireland.</p>
+                <div>
+                    <img src="assets/images/billythekid.png" alt="">
+                </div>
             </div>
-            <div id="about-image">
-                <img src="assets/images/billythekid.png" alt="A wanted poster of Billy The Kid">
-            </div>
+            
         </section>
 
         <section>Diaspora</section>
