Fixed About section bugs, About section provisionally finished

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </div>
         </section>
 
-        <section class="container-one">
+        <section class="about">
             <div id="about-text">
-                <h2>About</h2>
+                <h2 style="text-align: center;">About</h2>
                 <br>
                 <hr>
                 <br>
@@ -59,14 +59,46 @@
                     isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
                 <br>
                 <p>So for better or for worse, we bring you a collection of histories of the <span style="font-style: italic;">down-trodden, dark</span> and down-right <span style="font-style: italic;">dispicable</span> diaspora of Ireland.</p>
-                <div>
-                    <img src="assets/images/billythekid.png" alt="">
-                </div>
+            </div>
+            <div>
+                <img src="assets/images/billythekid.png" alt="A wanted poster of Billy The Kid">
             </div>
             
         </section>
 
-        <section>Diaspora</section>
+        <section class="diaspora">
+            <div>
+                <h2 style="text-align: center;">The Diaspora</h2>
+                <hr>
+                <br>
+                <img src="assets/images/irishMigrationMap1.jpg" alt="">
+            </div>
+            <div id="diaspora-text">
+                <p>As a once gone and once returned Irish emigrant myself, I have found a fascination in the 
+                    paths of other Irish across the globe and what brought them there.
+                    With the most remote Irish pubs not being in Donegal, the Kerry mountains or Aran Islands,
+                    but in the Himalayas, Patagonia, Mongolia, the Andes... it's clear to see how far Irish feet have
+                    travelled.
+                    However, there are a number of countries in which the Irish mainly settled, either by choice, necessity or by force.
+                    The principle locations and events that caused the migrations were as follows:
+                    Napoleonic Wars - Europe
+                    South American revolutions - Argentina, Uruguay, Chile and Brazil.
+                    Irish rebellions, exile/penal colonies - The Carribbean, Australia, New Zealand.
+                    The Great Potato Famine - USA, Canada, the UK
+                    Economic crisis in Ireland - the UK, USA, Canada, Australia
+                </p>
+                <br>
+                <h3>Today</h3>
+                <p>
+                    Since the 2000's there has been a large and steady flow of Irish emigrants all across
+                    the globe.  However in recent times the reasons for leaving have changed from economic necessity to include better and
+                    more varied opportunities abroad, the cost of living and housing crisis in Ireland, chance to acrue wealth, adventure and a retirement in the sun.
+                    In addition to the above countries, today many Irish people are deciding to settle in the Middle-East, South-East Asia and the Mediterranean.
+                    Times may have changed, but one thing is the strength of Irish crime syndicates' operations abroad have ensured
+                    that Éire Dubh will still always have articles to write...
+                </p>
+            </div>
+        </section>
 
         <section>Go to</section>
 
