Add table to index.html diaspora section

--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
             
         </section>
 
+        <div class="diaspora-title">
+            <h2 style="text-align: center;">The Diaspora</h2>
+            <hr>
+            <br>
+            <img src="assets/images/irishMigrationMap1.jpg" alt="">
+        </div>
+
         <section class="diaspora">
-            <div>
-                <h2 style="text-align: center;">The Diaspora</h2>
-                <hr>
-                <br>
-                <img src="assets/images/irishMigrationMap1.jpg" alt="">
-            </div>
             <div id="diaspora-text">
                 <p>As a once gone and once returned Irish emigrant myself, I have found a fascination in the 
                     paths of other Irish across the globe and what brought them there.
@@ -80,15 +81,56 @@
                     but in the Himalayas, Patagonia, Mongolia, the Andes... it's clear to see how far Irish feet have
                     travelled.
                     However, there are a number of countries in which the Irish mainly settled, either by choice, necessity or by force.
-                    The principle locations and events that caused the migrations were as follows:
-                    Napoleonic Wars - Europe
-                    South American revolutions - Argentina, Uruguay, Chile and Brazil.
+                    The principle locations and events that caused the migrations were as follows:</p>
+                    <table>
+                        <tr>
+                            <th>Cause</th>
+                            <th>Period</th>
+                            <th>Destination</th>
+                        </tr>
+                        <tr>
+                            <td>Cromwellian Conquest: Indentured Servitude & Slavery</td>
+                            <td>1649-1653</td>
+                            <td>The Carribbean, North America</td>
+                        </tr>
+                        <tr>
+                            <td>Penal Colonies</td>
+                            <td>1788-1868</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Napoleonic Wars</td>
+                            <td>1803-1815</td>
+                            <td>Europe</td>
+                        </tr>
+                        <tr>
+                            <td>South American Revolutions</td>
+                            <td>1810-1829</td>
+                            <td>Argentina, Uruguay, Chile, Brazil</td>
+                        </tr>
+                        <tr>
+                            <td>The Great Famine</td>
+                            <td>1845-1852</td>
+                            <td>Britain, USA, Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Irish Economy</td>
+                            <td>1950-1970, 1980-1990</td>
+                            <td>Britain, North America</td>
+                        </tr>
+                        <tr>
+                            <td>Global Recession</td>
+                            <td>2008-2012</td>
+                            <td>Britain, Australia, New Zealand, North America</td>
+                        </tr>
+                        
+                    American revolutions - Argentina, Uruguay, Chile and Brazil.
                     Irish rebellions, exile/penal colonies - The Carribbean, Australia, New Zealand.
-                    The Great Potato Famine - USA, Canada, the UK
-                    Economic crisis in Ireland - the UK, USA, Canada, Australia
-                </p>
+                    Great Potato Famine - USA, Canada, the UK
+                     crisis in Ireland - the UK, USA, Canada, Australia.
+                </table>
                 <br>
-                <h3>Today</h3>
+                <h3>21st Century</h3>
                 <p>
                     Since the 2000's there has been a large and steady flow of Irish emigrants all across
                     the globe.  However in recent times the reasons for leaving have changed from economic necessity to include better and
