--- a/events.html
+++ b/events.html
@@ -39,6 +39,72 @@
                 <img src="assets/images/darkhedges.jpg" alt="A picture of the dark hedges in Northern Ireland">
             </div>
         </section>
+
+        <div id="diaspora-text">
+            <p>As a once gone and once returned Irish emigrant myself, I have found a fascination in the 
+                paths of other Irish across the globe and what brought them there.
+                With the most remote Irish pubs not being in Donegal, the Kerry mountains or Aran Islands,
+                but in the Himalayas, Patagonia, Mongolia, the Andes... it's clear to see how far Irish feet have
+                travelled.
+                However, there are a number of countries in which the Irish mainly settled, either by choice, necessity or by force.
+                The principle locations and events that caused the migrations were as follows:</p>
+                <table>
+                    <tr>
+                        <th>Cause</th>
+                        <th>Period</th>
+                        <th>Destination</th>
+                    </tr>
+                    <tr>
+                        <td>Cromwellian Conquest: Indentured Servitude & Slavery</td>
+                        <td>1649-1653</td>
+                        <td>The Carribbean, North America</td>
+                    </tr>
+                    <tr>
+                        <td>Penal Colonies</td>
+                        <td>1788-1868</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Napoleonic Wars</td>
+                        <td>1803-1815</td>
+                        <td>Europe</td>
+                    </tr>
+                    <tr>
+                        <td>South American Revolutions</td>
+                        <td>1810-1829</td>
+                        <td>Argentina, Uruguay, Chile, Brazil</td>
+                    </tr>
+                    <tr>
+                        <td>The Great Famine</td>
+                        <td>1845-1852</td>
+                        <td>Britain, USA, Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Irish Economy</td>
+                        <td>1950-1970, 1980-1990</td>
+                        <td>Britain, North America</td>
+                    </tr>
+                    <tr>
+                        <td>Global Recession</td>
+                        <td>2008-2012</td>
+                        <td>Britain, Australia, New Zealand, North America</td>
+                    </tr>
+                    
+                American revolutions - Argentina, Uruguay, Chile and Brazil.
+                Irish rebellions, exile/penal colonies - The Carribbean, Australia, New Zealand.
+                Great Potato Famine - USA, Canada, the UK
+                 crisis in Ireland - the UK, USA, Canada, Australia.
+            </table>
+            <br>
+            <h3>Today</h3>
+            <p>
+                Over the last decade there has been a steady flow of Irish emigrants all across
+                the globe.  However in recent times, the reasons for leaving have changed from economic necessity to include better and
+                more varied opportunities abroad, the cost of living and housing crisis in Ireland, chance to acrue wealth, adventure and a retirement in the sun.
+                In addition to the above countries, today many Irish people are deciding to settle in the Middle-East, South-East Asia and the Mediterranean.
+                Times may have changed, but Éire Dubh will still always have articles to write...
+            </p>
+        </div>
 </body>
 
 </html>
