--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
                     isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
                 <br>
-                <p>So for better or for worse, we bring you a collection of histories of the <span style="font-style: italic;">down-trodden, dark</span> and down-right <span style="font-style: italic;">dispicable</span> diaspora of Ireland.</p>
+                <p>So for better or for worse, we bring you a collection of histories from the <span style="font-style: italic;">down-trodden</span> and <span style="font-style: italic;">dark</span> to down-right <span style="font-style: italic;">dispicable</span> diaspora of Ireland.</p>
             </div>
             <div>
                 <img src="assets/images/billythekid.png" alt="A wanted poster of Billy The Kid">
@@ -66,79 +66,22 @@
             
         </section>
 
-        <div class="diaspora-title">
-            <h2 style="text-align: center;">The Diaspora</h2>
-            <hr>
-            <br>
-            <img src="assets/images/irishMigrationMap1.jpg" alt="">
-        </div>
-
         <section class="diaspora">
-            <div id="diaspora-text">
-                <p>As a once gone and once returned Irish emigrant myself, I have found a fascination in the 
-                    paths of other Irish across the globe and what brought them there.
-                    With the most remote Irish pubs not being in Donegal, the Kerry mountains or Aran Islands,
-                    but in the Himalayas, Patagonia, Mongolia, the Andes... it's clear to see how far Irish feet have
-                    travelled.
-                    However, there are a number of countries in which the Irish mainly settled, either by choice, necessity or by force.
-                    The principle locations and events that caused the migrations were as follows:</p>
-                    <table>
-                        <tr>
-                            <th>Cause</th>
-                            <th>Period</th>
-                            <th>Destination</th>
-                        </tr>
-                        <tr>
-                            <td>Cromwellian Conquest: Indentured Servitude & Slavery</td>
-                            <td>1649-1653</td>
-                            <td>The Carribbean, North America</td>
-                        </tr>
-                        <tr>
-                            <td>Penal Colonies</td>
-                            <td>1788-1868</td>
-                            <td>Australia</td>
-                        </tr>
-                        <tr>
-                            <td>Napoleonic Wars</td>
-                            <td>1803-1815</td>
-                            <td>Europe</td>
-                        </tr>
-                        <tr>
-                            <td>South American Revolutions</td>
-                            <td>1810-1829</td>
-                            <td>Argentina, Uruguay, Chile, Brazil</td>
-                        </tr>
-                        <tr>
-                            <td>The Great Famine</td>
-                            <td>1845-1852</td>
-                            <td>Britain, USA, Canada</td>
-                        </tr>
-                        <tr>
-                            <td>Irish Economy</td>
-                            <td>1950-1970, 1980-1990</td>
-                            <td>Britain, North America</td>
-                        </tr>
-                        <tr>
-                            <td>Global Recession</td>
-                            <td>2008-2012</td>
-                            <td>Britain, Australia, New Zealand, North America</td>
-                        </tr>
-                        
-                    American revolutions - Argentina, Uruguay, Chile and Brazil.
-                    Irish rebellions, exile/penal colonies - The Carribbean, Australia, New Zealand.
-                    Great Potato Famine - USA, Canada, the UK
-                     crisis in Ireland - the UK, USA, Canada, Australia.
-                </table>
+            <div>
+                <img src="assets/images/irishMigrationMap1.jpg" alt="">
+            </div>
+            <div class="diaspora-text">
+                <h2 style="text-align: center;">The Diaspora</h2>
+                <hr>
+                <p>A small island with a big footprint.</p>
                 <br>
-                <h3>21st Century</h3>
-                <p>
-                    Since the 2000's there has been a large and steady flow of Irish emigrants all across
-                    the globe.  However in recent times the reasons for leaving have changed from economic necessity to include better and
-                    more varied opportunities abroad, the cost of living and housing crisis in Ireland, chance to acrue wealth, adventure and a retirement in the sun.
-                    In addition to the above countries, today many Irish people are deciding to settle in the Middle-East, South-East Asia and the Mediterranean.
-                    Times may have changed, but one thing is the strength of Irish crime syndicates' operations abroad have ensured
-                    that Éire Dubh will still always have articles to write...
-                </p>
+                <p> From Tipperary to Timbuktu, the Irish are all over.
+                    So if asked at your next pub-quiz who the three astronauts on the first moon landing were,
+                    know that it was Neil Armstrong, Buzz Aldrin and...</p>
+                <p>...Michael Collins? No, not <span style="font-style: italic;">the</span> Michael Collins posthumously sent on a diplomatic mission by an aging Eamon de Valera,
+                but we'll claim him nonetheless!</p>
+                <br>
+                <p>Check out the where, why and what lead to some infamous exports here.</p>
             </div>
         </section>
 
