Add people section to index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,16 @@
             </div>
         </section>
 
-        <section>Go to</section>
+        <section class="people-links">
+            <div id="mary">
+                <h2>Typhoid Mary</h2>
+                <p>The seemingly innocuous cook who carried a deadly secret...</p>
+            </div>
+            <div id="james">
+                <h2>James Jameson</h2>
+                <p>The whiskey heir with a penchant for cannibalism...</p>
+            </div>
+        </section>
 
         <footer></footer>
 </body>
