Bugs in people cards section

--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
         <section class="people-links">
             <div id="mary">
                 <h2>Typhoid Mary</h2>
+                <img src="assets/images/Typhoid_Mary.jpg" alt="">
                 <p>The seemingly innocuous cook who carried a deadly secret...</p>
             </div>
             <div id="james">
                 <h2>James Jameson</h2>
-                <p>The whiskey heir with a penchant for cannibalism...</p>
+                <img src="assets/images/james-jameson.jpg" alt="">
+                <p>The whiskey heir with a curiosity for cannibalism...</p>
             </div>
         </section>
 
