--- a/events.html
+++ b/events.html
@@ -80,6 +80,11 @@
                         <td>Britain, USA, Canada</td>
                     </tr>
                     <tr>
+                        <td>The Boer Wars, Mining Opportunities</td>
+                        <td>1880-1902</td>
+                        <td>South Africa</td>
+                    </tr>
+                    <tr>
                         <td>Irish Economy</td>
                         <td>1950-1970, 1980-1990</td>
                         <td>Britain, North America</td>
@@ -89,11 +94,6 @@
                         <td>2008-2012</td>
                         <td>Britain, Australia, New Zealand, North America</td>
                     </tr>
-                    
-                American revolutions - Argentina, Uruguay, Chile and Brazil.
-                Irish rebellions, exile/penal colonies - The Carribbean, Australia, New Zealand.
-                Great Potato Famine - USA, Canada, the UK
-                 crisis in Ireland - the UK, USA, Canada, Australia.
             </table>
             <br>
             <h3>Today</h3>
