--- a/index.html
+++ b/index.html
@@ -86,15 +86,17 @@
         </section>
 
         <section class="people-links">
-            <div id="mary">
+            <div class="card">
+                <div class="card-image card1"></div>
                 <h2>Typhoid Mary</h2>
-                <img src="assets/images/Typhoid_Mary.jpg" alt="">
-                <p>The seemingly innocuous cook who carried a deadly secret...</p>
+                <p>The seemingly innocuous cook in New York who carried a deadly secret...</p>
+                <a href="#">Read more</a>
             </div>
-            <div id="james">
+            <div class="card">
+                <div class="card-image card2"></div>
                 <h2>James Jameson</h2>
-                <img src="assets/images/james-jameson.jpg" alt="">
-                <p>The whiskey heir with a curiosity for cannibalism...</p>
+                <p>The adventurer, artist and whiskey heir with a dark curiosity for cannibalism...</p>
+                <a href="#">Read more</a>
             </div>
         </section>
 
