Add socil media icons to footer

--- a/index.html
+++ b/index.html
@@ -98,9 +98,46 @@
                 <p>The adventurer, artist and whiskey heir with a dark curiosity for cannibalism...</p>
                 <a href="#">Read more</a>
             </div>
+            <div class="card">
+                <div class="card-image card3"></div>
+                <h2>Andrew Stoney</h2>
+                <p>Aristocrat, politician, lawman, adventurer, playboy, conman and killer.</p>
+                <a href="#">Read more</a>
+            </div>
         </section>
 
-        <footer></footer>
+        <footer class="socials">
+            <ul>
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://pinterest.com" target="_blank" rel="noopener">
+                        <i class="fa-brands fa-pinterest-p"></i>
+                    </a>
+                </li>
+            </ul>
+        </footer>
+
+        <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
