Fix bugs in footer, finish footer styling, add color transitions to links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Obscure and dark Irish history website">
     <meta name="keywords" content="eire dubh, irish, history, obscure, dark, irish diaspora, emigrants">
 
-    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ao765d05399.js" crossorigin="anonymous"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -108,38 +108,41 @@
             </div>
         </section>
 
-        <footer class="socials">
-            <ul>
-                <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopener">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="https://instagram.com" target="_blank" rel="noopener">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopener">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="https://pinterest.com" target="_blank" rel="noopener">
-                        <i class="fa-brands fa-pinterest-p"></i>
-                    </a>
-                </li>
-            </ul>
+        <footer>
+            <div class="socials">
+                <ul>
+                    <li>
+                        <a href="https://facebook.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="https://instagram.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="https://twitter.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="https://pinterest.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-pinterest-p"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </footer>
 
-        <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/67367d875b.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
